--- a/package.json
+++ b/package.json
@@ -1,18 +1,22 @@
 {
-  "name": "image_resizer_frontend",
+  "name": "upload-multiple-images",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2"
+    "styled-components": "^5.3.3",
+    "web-vitals": "^1.0.1",
+    "axios": "^0.21.1",
+    "formik": "^2.2.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=3200 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
